<resources>
    <string name="app_name">base_de_datos</string>
    <string name="nombres">Escriba su nombre</string>
    <string name="apellidos">Escriba su apellido</string>
    <string name="telefono">Ingrese su telefono</string>
    <string name="btn_proceso">PROCESAR</string>
    <string name="edad">Ingrese su edad</string>
    <string name="correo">Ingrese  su correo</string>
    <string name="direccion">Ingrese su direccion</string>
    <string name="PantallaIngreso">Agregar persona</string>
    <string name="PantallaLista">Lista agregados</string>
    <string name="idbuscar">Ingrese el ID Ejemplo \"1\"</string>
    <string name="buscarregistro">Buscar Registro</string>
    <string name="btnactualizar">Actualizar Registro</string>
    <string name="eliminarregistro">Eliminar el Registro</string>
    <string name="nom">NOMBRE</string>
    <string name="apelli">APELLIDO</string>
    <string name="telef">TELEFONO</string>
    <string name="eda">EDAD</string>
    <string name="correos">CORREO</string>
    <string name="direcciones">DIRECCIONES</string>
    <string name="btnactualizardatos">IR Actualizar datos</string>
    <string name="btnimagen">TOMAR IMAGEN</string>
    <string name="TomarFoto">Capturar Foto</string>
</resources>