<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B08AF2"
    tools:context=".MainActivityActualizar">

    <EditText
        android:id="@+id/id"
        android:layout_width="210dp"
        android:layout_height="78dp"
        android:ems="10"
        android:hint="@string/idbuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnbuscar"
        android:layout_width="246dp"
        android:layout_height="81dp"
        android:backgroundTint="#4CAF50"
        android:hint="@string/buscarregistro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id"
        tools:textColorHint="#080908" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="442dp"
        android:layout_height="81dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnbuscar" />

    <EditText
        android:id="@+id/apelli"
        android:layout_width="444dp"
        android:layout_height="74dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/apelli"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/eda"
        android:layout_width="446dp"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="@string/eda"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telef"
        app:layout_constraintVertical_bias="0.012" />

    <EditText
        android:id="@+id/correos"
        android:layout_width="450dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/correos"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eda" />

    <EditText
        android:id="@+id/direcciones"
        android:layout_width="444dp"
        android:layout_height="82dp"
        android:ems="10"
        android:hint="@string/direcciones"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correos"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/telef"
        android:layout_width="445dp"
        android:layout_height="77dp"
        android:ems="10"
        android:hint="@string/telef"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apelli" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="242dp"
        android:layout_height="79dp"
        android:layout_marginStart="72dp"
        android:backgroundTint="#E41B0C"
        android:hint="@string/eliminarregistro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        tools:textColorHint="#0D0C0C" />

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="226dp"
        android:layout_height="85dp"
        android:backgroundTint="#1E87DA"
        android:hint="@string/btnactualizar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btneliminar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        tools:textColorHint="#0A0909" />
</androidx.constraintlayout.widget.ConstraintLayout>